Fix Facebook profile picture alignment

--- a/media/css/cover_style.css
+++ b/media/css/cover_style.css
@@ -59,8 +59,8 @@ body {
 	border: 4px solid white;
 	padding: 1px;
 	position: absolute;
-	top: 192px;
-	left: 13px;
+	top: 195px;
+	left: 24px;
 }
 #content_inner.facebook.special #canvas_picture {
 	top: 211px;
